--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         run: flake8 .  # Check code style
 
       - name: Run unit tests
-        run: python -m unittest discover -s . -p "test_*.py"
+        run: python -m unittest discover -s . -p "unittesting*.py"
